[gd_scene load_steps=2 format=3 uid="uid://d0t4w5bfhv8jn"]

[ext_resource type="Script" path="res://Scene/GoddessWeaponSelect/GoddessWeaponSelect.gd" id="1_1v5xg"]

[node name="GoddessWeaponSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1v5xg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="GoddessPortrait" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueLabel" type="RichTextLabel" parent="DialoguePanel/DialogueContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "歡迎，勇敢的冒險者！"
fit_content = true

[node name="ContinueButton" type="Button" parent="DialoguePanel/DialogueContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "繼續"

[node name="WeaponSelectionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -150.0
offset_right = 450.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponButtonsContainer" type="HBoxContainer" parent="WeaponSelectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WeaponButton1Container" type="VBoxContainer" parent="WeaponSelectionPanel/WeaponButtonsContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponButton1" type="Button" parent="WeaponSelectionPanel/WeaponButtonsContainer/WeaponButton1Container"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponButton1Description" type="Label" parent="WeaponSelectionPanel/WeaponButtonsContainer/WeaponButton1Container"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
vertical_alignment = 1
autowrap_mode = 2

[node name="WeaponButton2Container" type="VBoxContainer" parent="WeaponSelectionPanel/WeaponButtonsContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponButton2" type="Button" parent="WeaponSelectionPanel/WeaponButtonsContainer/WeaponButton2Container"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponButton2Description" type="Label" parent="WeaponSelectionPanel/WeaponButtonsContainer/WeaponButton2Container"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
vertical_alignment = 1
autowrap_mode = 2

[node name="WeaponButton3Container" type="VBoxContainer" parent="WeaponSelectionPanel/WeaponButtonsContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponButton3" type="Button" parent="WeaponSelectionPanel/WeaponButtonsContainer/WeaponButton3Container"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponButton3Description" type="Label" parent="WeaponSelectionPanel/WeaponButtonsContainer/WeaponButton3Container"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
vertical_alignment = 1
autowrap_mode = 2
